# ray-optics-web

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  THIRD-PARTY-PYTHON-LICENSES.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  jest.setup.ts.md  license-checker-clarifications.json  next.config.dev.ts  next.config.dev.ts.md  next.config.ts  next.config.ts.md  package-lock.json  package.json  package.json.md  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.test.json
src/python/: index.md  pyproject.toml  pyproject.toml.md
src/python/src/: index.md
src/python/src/rayoptics_web_utils/: __init__.py  __init__.py.md  index.md
src/python/src/rayoptics_web_utils/analysis/: __init__.py  __init__.py.md  _afocal.py  _afocal.py.md  _fan.py  _fan.py.md  _mtf.py  _mtf.py.md  analysis.py  analysis.py.md  diffraction_mtf.py  diffraction_mtf.py.md  diffraction_psf.py  diffraction_psf.py.md  field_curves.py  field_curves.py.md  first_order.py  first_order.py.md  geometric_psf.py  geometric_psf.py.md  index.md  longitudinal_spherical_aberration.py  longitudinal_spherical_aberration.py.md  opd_fan.py  opd_fan.py.md  ray_fan.py  ray_fan.py.md  seidel.py  seidel.py.md  spot.py  spot.py.md  strehl_vs_wavelength.py  strehl_vs_wavelength.py.md  surface_semi_diameters.py  surface_semi_diameters.py.md  wavefront.py  wavefront.py.md
src/python/src/rayoptics_web_utils/aperture/: __init__.py  __init__.py.md  annular.py  annular.py.md  index.md  (+4 more)
src/python/tests/rayoptics_web_utils/: conftest.py  test_documentation_structure.py
(+1739 files in other folders)
